# generatorProject

./: README.md  go.mod  main.go
cmd/: generate.go  info.go  list.go  root.go
internal/config/: config.go
internal/generator/: generator.go
templates/cpp-cmake/: CMakeLists.txt
templates/cpp-cmake/include/core/: calculator.hpp
templates/cpp-cmake/src/: CMakeLists.txt  main.cpp
templates/cpp-cmake/src/core/: calculator.cpp
templates/cpp-cmake/test/: CMakeLists.txt  main_test.cpp
templates/cpp-cmake/test/unit/: calculator_test.cpp
templates/go-api/: .env.example  Dockerfile  README.md  go.mod  main.go
templates/go-api/cmd/api/: main.go
templates/go-api/internal/handlers/: user_handler.go
templates/go-api/internal/repository/: user_repository.go
templates/go-api/internal/service/: user_service.go
templates/react-ts/: index.html  package.json
templates/react-ts/src/components/: Layout.tsx
templates/react-ts/src/components/common/: Button.tsx
templates/react-ts/src/pages/: Users.tsx
templates/react-ts/src/services/: api.ts
templates/rust-cli/: Cargo.toml  README.md
templates/rust-cli/src/: config.rs  error.rs  generator.rs  main.rs
templates/rust-cli/src/commands/: calc.rs  file.rs  hello.rs
templates/rust-cli/tests/: cli_test.rs
