[package]
name = "{{.ProjectName}}"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Générateur de templates de projets"
license = "MIT"

[[bin]]
name = "generator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
handlebars = "4.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0" 